<resources>
    <string name="app_name">易助</string>
    <string name="neighborhood">附近</string>
    <string name="ask">提问</string>
    <string name="help">求助</string>
    <string name="sos">求救</string>
    <string name="action_settings">Settings</string>
    <string name="message">私信</string>
    <string name="more">更多</string>
    <string name="sponsorSos">发起求救</string>
    <string name="sponsorHelp">发起求助</string>
    <string name="sponsorAsk">发起提问</string>
    <string name="mycontact">我的联系人</string>
    <string name="personcenter">个人中心</string>
    <string name="bank">爱心银行</string>
    <string name="square">社区广场</string>
    <string name="myparti">我参与的</string>
    <string name="setting">设置</string>
    <string name="helpandfeedback">帮助与反馈</string>
    <string name="mymessage">我的消息</string>
    <string name="myletter">我的私信</string>
    <string name="recentreply">最近回复</string>
    <string name="personmsg">个人消息</string>
    <string name="systemmsg">系统消息</string>
    <string name="reply">回复</string>
    <string name="creditleveltext">信誉等级</string>
    <string-array name="creditlevel">
        <item>新手</item>
        <item>混球</item>
        <item>坏蛋</item>
        <item>平民</item>
        <item>热心人</item>
        <item>慈善家</item>
    </string-array>
    <string name="creditvaluetext">信誉值</string>
    <string name="myconcernedpeople">我关心的人</string>
    <string name="transfertofriend">转给我的好友</string>
    <string name="transfertostranger">转给其他人</string>
    <string name="search">查询</string>
    <string name="searchhint">请输入手机号码</string>
    <string name="choosefriend">选择好友</string>
    <string name="askdetail">提问详情</string>
    <string name="askfinished">提问已结束</string>
    <string name="send">发送</string>
    <string name="isacceptpush">是否接收推送消息</string>
    <string name="privacy">隐私政策</string>
    <string name="accountandsecurity">账号与安全</string>
    <string name="versionupdate">版本更新</string>
    <string name="aboutus">关于我们</string>
    <string name="exit">退出登录</string>
    <string name="phonenum">手机号</string>
    <string name="email">邮箱</string>
    <string name="modifypw">修改密码</string>
    <string name="modifyphone">修改绑定手机号</string>
    <string name="modifyemail">修改绑定邮箱</string>
    <string name="account">账号</string>
    <string name="security">安全</string>
    <string name="accountnow">当前账号</string>
    <string name="pwnow">当前密码</string>
    <string name="newpw">新的密码</string>
    <string name="confirmpw">确认密码</string>
    <string name="phonenow">当前手机号</string>
    <string name="sendcode">发送验证码</string>
    <string name="inputnewphone">新手机号</string>
    <string name="inputcode">请输入验证码</string>
    <string name="emailnow">当前邮箱</string>
    <string name="newemail">新的邮箱</string>
    <string name="inputnewemail">请输入新的邮箱</string>
    <string name="website">官方网站</string>
    <string name="servicephone">客服电话</string>
    <string name="serviceemail">客服邮箱</string>
    <string name="ourwebsite">www.ehelp.com</string>
    <string name="ourservicephone">020-3111222</string>
    <string name="ourserviceemail">ehelpkf@sina.com</string>
    <string name="ehelpintro">我们本着“让帮助更加简便有效，让人人都乐于帮助”的理念，致力于打造一个连接社会弱势群体和爱心资源的平台，让求助和施助更加简便、有效、安全。</string>
    <string name="confirm">确认</string>
    <string name="modifypwfinish">成功修改密码</string>
    <string name="modifyphonefinish">成功修改绑定手机号</string>
    <string name="modifyemailfinish">验证邮件已发送</string>
    <string name="signin">签到</string>
    <string name="signined">已签到</string>
    <string name="basicinfo">基本信息</string>
    <string name="identiinfo">认证信息</string>
    <string name="healthcard">我的健康卡</string>
    <string name="urgencycard">紧急求救卡</string>
    <string name="username">用户名</string>
    <string name="location">所在地</string>
    <string name="address">住址</string>
    <string name="occupation">职业</string>
    <string name="realname">真实姓名</string>
    <string name="birthdate">出生年月</string>
    <string name="sex">性别</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="bloodtype">血型</string>
    <string name="anaphylaxis">过敏反应</string>
    <string name="druguse">药物使用</string>
    <string name="medicalhistory">病史</string>
    <string name="urgencycardinstru">设置紧急求救卡，发起求救时将自动触发这些操作</string>
    <string name="urgencycard1">发送私信给紧急联系人</string>
    <string name="urgencycard2">手机持续震动</string>
    <string name="urgencycard3">手机持续发出警报</string>
    <string name="urgencycard4">开启录音</string>
    <string name="urgencycard5">拨通紧急电话</string>
    <string name="checkreply">查看回复</string>
    <string name="gohelp">前往帮助</string>
    <string name="helpdetail">救助详情</string>
    <string name="myfriend">联系人</string>
    <string name="mygroup">我的群</string>
    <string name="myurgencycontact">紧急联系人</string>
    <string name="myurgencycontacttext">我的紧急联系人</string>
    <string name="add">添加</string>
    <string name="addfriend">添加好友</string>
    <string name="addfriendhint">在这里告诉TA你是谁吧...</string>
    <string name="remark">备注</string>
    <string name="grouping">分组</string>
    <string name="creategroup">创建群</string>
    <string name="iscertification">是否实名认证</string>
    <string name="age">年龄</string>
    <string name="detailmsg">详细信息</string>
    <string name="addfriend2">加好友</string>
    <string name="groupname">群名称</string>
    <string name="create">创建</string>
    <string name="invitefriend">邀请好友</string>
    <string name="addtourgencycontact">添加到紧急联系人</string>
    <string name="recommendtofriend">推荐给好友</string>
    <string name="askforcoininfo">请求关注其爱心币</string>
    <string name="movetogroup">移至分组</string>
    <string name="deletefriend">删除好友</string>
    <string name="hidereply">收起回复</string>
    <string name="helpreply">求助回复</string>
    <string name="helpcontent">求助内容</string>
    <string name="isthehelpreal">此次求助是否真实？</string>
    <string name="isthesosreal">此次求救是否真实？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="upload">提交</string>
    <string name="evaluate">评价</string>
    <string name="helpfinished">求助已结束</string>
    <string name="sosfinished">求救已结束</string>
    <string name="sostype">求救类型</string>
    <string name="sosdetail">求救详情</string>
    <string name="sosreply">求救回复</string>
    <string name="takephoto">拍照</string>
    <string name="recording">录音</string>
    <string name="video">录视频</string>
    <string name="title">标题</string>
    <string name="titlehint">标题(14字以内)</string>
    <string name="sponsoraskhint">在这描述您的提问内容(100字以内)...</string>
    <string name="sponsorhelphint">在这描述您的求助内容(100字以内)...</string>
    <string name="askmsg">提问信息</string>
    <string name="acceptans">采纳回答</string>
    <string name="terminateask">结束提问</string>
    <string name="seek">搜索</string>
    <string name="choosehelpposhint">输入求助地点，默认为当前位置</string>
    <string name="choosehelppos">选择求助地点</string>
    <string name="helpmsg">求助信息</string>
    <string name="helping">求助进行中...</string>
    <string name="check">查看</string>
    <string name="terminatehelp">结束求助</string>
    <string name="terminatesos">结束求救</string>
    <string name="terminatehelpstatus">结束求助状态</string>
    <string name="terminatesosstatus">结束求救状态</string>
    <string name="checkmyhelp">查看我的求助</string>
    <string name="sosing">求救进行中...</string>
    <string name="evaluatetext1">TA是否帮助了您？</string>
    <string name="evaluatetext2">请评价TA对您的帮助</string>
    <string name="evaluatetext3">我打算回报TA</string>
    <string name="evaluatetext4">枚</string>
    <string name="responsetime">响应速度</string>
    <string name="attitude">服务态度</string>
    <string name="quality">服务质量</string>
    <string name="uploadevaluate">提交评价</string>
    <string name="cancelhelp">取消求助</string>
    <string name="cancelsos">取消求救</string>
    <string name="freshmen">新手上路</string>
    <string name="basicfuninstru">基本功能解析</string>
    <string name="commonque">常见问题</string>
    <string name="feedback">意见反馈</string>
    <string name="contactus">联系我们</string>
    <string name="freshmenque1">1、易助是什么?我在这里可以做些什么?</string>
    <string name="freshmenans1">\t\t\t易助致力于搭建一个更简便安全的网上求助施助平台，用户在这里即可就生活中的小疑惑提出问题，也能将生活中的小困难说出来让身边的热心人帮忙解决，遇到危险时还能用易助向您的紧急联系人、警察等寻求救助。\n \t\t\t易助，让帮助变得更加简单，让人人都乐于帮助。</string>
    <string name="freshmenque2">2、如何注册使用？</string>
    <string name="freshmenans2">\t\t\t用户可通过绑定手机号等方式注册使用易助。\n\t\t\t易助推荐使用实名认证方式，用户可进入个人中心，在实名认证栏目下上传自己的个人照和二代身份证照片等相关证明，待系统审核通过后便可认证成功。</string>
    <string name="freshmenque3">3、一定要实名认证吗？实在不会实名认证怎么办？</string>
    <string name="freshmenans3">\t\t\t实名认证并不是强制性的，但通过实名认证过的用户增加一定的信誉值，让您更容易取得其他用户的信任，增大获助几率。\n\t\t\t如果远在家乡的父母等亲人不会自己上传的话，也可通过一人通过实名认证担保全家的方式帮他们通过认证，以方便用户的使用。</string>
    <string name="freshmenque4">4、爱心币怎么来的？</string>
    <string name="freshmenans4">\t\t\t在用户初次使用易助时，系统会自动给用户发放20个爱心币用于作为用户本金。</string>
    <string name="freshmenque5">5、如何提高自己的爱心币？</string>
    <string name="freshmenans5">\t\t\t其他用户在发起求助等请求时可选择悬赏爱心币，您若帮助成功，系统便会奖励给您相应的爱心币。</string>
    <string name="freshmenque6">6、爱心币有什么用处？</string>
    <string name="freshmenans6">\t\t\t(1)需用户在发起求助等请求时，可悬赏一定数量的爱心币来吸引更多的人前往帮助。\n\t\t\t(2)爱心币可以和家人共享，让家中没有帮助别人能力的老人小孩因为您的爱心也能通过爱心币享受同样的帮助和服务。\n\t\t\t(3)易助会与社区合作，您获得的爱心币能参与社区的爱心兑换活动，换取您所需要的物品。</string>
    <string name="freshmenque7">7、新用户的信誉值怎么确定？</string>
    <string name="freshmenans7">\t\t\t新用户的信誉值为未定义（-1），需要在参与3次事件之后才能确定基本值，此后仍会因为用户的行为而产生改变。</string>
    <string name="freshmenque8">8、如何提高自己的信誉值？</string>
    <string name="freshmenans8">\t\t\t(1)实名认证，绑定手机邮箱等身份证明可以增加您的信誉值。\n\t\t\t(2)每次帮助结束后的双方互评，若您发出的求助真实，提供的帮助可靠，对方会给您较高的评价，这样便可提高您的信誉值。</string>
    <string name="commonque1">问：易助是怎么预防小孩失踪的？</string>
    <string name="commonans1">答：易助会绑定孩子与家长的设备，当孩子离开家长一定范围后，及时向家长的设备发出警告。当孩子已经走失后，由家长控制或孩子按“迷路走失求救”按钮，手机自动开启导航，语音导回到家长身边；或者家长教导小孩到附近安全的地方等待，再由手机导航至孩子身边。系统将时刻关注孩子周围的动态，准确定位，并将消息推送给家长以实时保护孩子安全。</string>
    <string name="commonque2">问：易助在用户需要帮助时向其他用户推送求助信息时是怎么集中各方力量的援助的，也即是怎么找相应的“爱心天使”的？</string>
    <string name="commonans2">首先易助在用户使用一键求助功能时会先向其邻近的信誉较好的易助用户发出求助信号。其次，易助将依靠一套特殊的关系体制，以保障用户能得到安全有效的服务。产品推出初期我们会和一些社区服务机构进行合作，社区住户将通过实名认证方式使用本产品，与该社区内的诊所、物业、安保等机构共同形成一个网上社区圈。当某一居民用户遇到困难发出求助信息时，系统就可根据这一关系通过分析不同的求助类型和场景将信息推送给特定的人群（比如亲朋邻里，社区医生保安等），使用户能得到及时有效安全的帮助。</string>
    <string name="commonque3">问：假如我在遇险时使用易助的一键求救功能会不会让某些附近的坏人看到然后“乘火打劫”？</string>
    <string name="commonans3">答：易助设计了信任与信誉模块来确保一个安全，绿色的帮助环境。我们在向您邻近的易助用户推送您的求救信息时也会优先向信誉较高的易助用户发出求救信号，尽可能降低了风险。</string>
    <string name="commonque4">问：我在易助上面求助的都是什么样的人？</string>
    <string name="commonans4">易助有一套特殊的建立关系体制，以保障用户能得到安全有效的服务。产品推出初期我们会和一些社区服务机构进行合作，社区住户将通过实名认证方式使用本产品，与该社区内的诊所、物业、安保等机构共同形成一个网上社区圈。邻里之间可在易助平台上交流互动，物业机构亦可在平台上发布信息，以此建立稳定的社区关系。当某一居民用户遇到困难发出求助信息时，系统就可根据这一关系通过分析不同的求助类型和场景将信息推送给特定的人群（比如亲朋邻里，社区医生保安等），使用户能得到及时有效安全的帮助。</string>
    <string name="commonque5">问：通过易助帮助其他人是否可以得到相应的保障？比如不会帮助他人后反被陷害等。</string>
    <string name="commonans5">答：当然可以！易助平台建立了一个第三方机构，通过软件功能结合当今社会上的法律法规，保障施助者的基本权益。\n易助是基于互联网的一款软件，所有的信息都会在云端保存，当出现好心反遭坏报的情况时，只要在云端找到相应的求助施助信息便能为施助者提供最有力的保证。同时，那些讹人者的信誉值会大大降低以提醒以后的施助者，讹人者也会受到相应的法律惩罚。\n所以，通过易助平台，您可以放心奉献您的爱心吧。</string>
    <string name="sosstate">紧急求救状态</string>
    <string name="concern">关注</string>
    <string name="cancel">取消</string>
    <string name="healthcard2">TA的健康卡</string>
    <string name="helpingtime">曾助人次数</string>
    <string name="usermsg">用户信息</string>
    <string name="helperlist">救助人列表</string>
    <string name="finishhelp">完成本次求助事件</string>
    <string name="finishsos">完成本次求救事件</string>
    <string name="response">回答</string>
    <string name="addresponse">添加回答</string>
    <string name="detail"><u>详情</u></string>
    <string name="register">注册</string>
    <string name="findpw">找回密码</string>
    <string name="head">头像</string>
    <string name="resetpw">重置密码</string>
    <string name="ehelpinfo">易助信息</string>
    <string name="addurgencycontact">添加紧急联系人</string>
    <string name="coinnumtext">爱心币</string>
    <string name="creditstext">积分</string>
    <string name="mycoin">我的爱心币</string>
    <string name="rewardcoin">悬赏爱心币</string>
    <string name="coiniorecord">爱心币收支记录</string>
    <string name="managecoin">爱心币管理</string>
</resources>