<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@mipmap/logo"
        />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/ehelpintro"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/website"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/ourwebsite"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="微信公众号"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="易助"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/serviceemail"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/ourserviceemail"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>