<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/gray2"
        android:textSize="16sp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/phonenum"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text=""
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/tv_phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_marginTop="2dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/email"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text=""
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/tv_email"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:textColor="@color/gray2"
        android:textSize="16sp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:id="@+id/layout_modifypw"
        android:onClick="onClick"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/modifypw"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@mipmap/right"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:layout_marginTop="2dp"
        android:id="@+id/layout_modifyphone"
        android:onClick="onClick"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/modifyphone"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@mipmap/right"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:layout_marginTop="2dp"
        android:id="@+id/layout_modifyemail"
        android:onClick="onClick"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/modifyemail"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@mipmap/right"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

</LinearLayout>