<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/emailnow"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/newemail"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_newemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:hint="@string/inputnewemail"
            android:inputType="textEmailAddress"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="下一步"
        android:onClick="onClick"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_selector3"
        android:textSize="16sp"
        android:textColor="@color/white"/>

</LinearLayout>