<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:id="@+id/layout_freshmen"
        android:onClick="onClick"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/freshmen"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@mipmap/right"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:layout_marginTop="2dp"
        android:id="@+id/layout_basicfuninstru"
        android:onClick="onClick"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/basicfuninstru"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@mipmap/right"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:layout_marginTop="2dp"
        android:id="@+id/layout_commonque"
        android:onClick="onClick"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/commonque"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@mipmap/right"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:layout_marginTop="25dp"
        android:id="@+id/layout_feedback"
        android:onClick="onClick"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/feedback"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@mipmap/right"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:layout_marginTop="2dp"
        android:id="@+id/layout_aboutus"
        android:onClick="onClick"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/aboutus"
            android:layout_marginLeft="25dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@mipmap/right"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

</LinearLayout>